--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -54,7 +54,7 @@ button:hover {
 
 .banner-head {
       display: flex;
-      width:600px;
+      width: auto;
       justify-content: center;
       align-items:  center;
       text-align: center;
